// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField Component base should return a DateField Input object as disabled 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
  width: 100%;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  opacity: 0.3;
}

.c1 .DayPicker {
  background-color: hsl(0,0%,100%);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
  display: inline-block;
  font: inherit;
  outline: 0;
}

.c1 .DayPicker-wrapper {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .DayPicker-Months {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .DayPicker-Month {
  margin: 1rem;
}

.c1 .DayPickerInput-OverlayWrapper {
  position: absolute;
  z-index: 1010;
  max-width: 100%;
}

.c1 .DayPicker-NavButton {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  left: auto;
  display: inline-block;
  margin-top: 2px;
  width: 1.25rem;
  height: 1.25rem;
  background-position: center;
  background-size: 50%;
  background-repeat: no-repeat;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-NavButton:hover {
  opacity: 0.8;
}

.c1 .DayPicker-NavButton--prev {
  margin-right: 1.5rem;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAVVJREFUWAnN2G0KgjAYwPHpGfRkaZeqvgQaK+hY3SUHrk1YzNLay/OiEFp92I+/Mp2F2Mh2lLISWnflFjzH263RQjzMZ19wgs73ez0o1WmtW+dgA01VxrE3p6l2GLsnBy1VYQOtVSEH/atCCgqpQgKKqYIOiq2CBkqtggLKqQIKgqgCBjpJ2Y5CdJ+zrT9A7HHSTA1dxUdHgzCqJIEwq0SDsKsEg6iqBIEoq/wEcVRZBXFV+QJxV5mBtlDFB5VjYTaGZ2sf4R9PM7U9ZU+lLuaetPP/5Die3ToO1+u+MKtHs06qODB2zBnI/jBd4MPQm1VkY79Tb18gB+C62FdBFsZR6yeIo1YQiLJWMIiqVjQIu1YSCLNWFgijVjYIuhYYCKoWKAiiFgoopxYaKLUWOii2FgkophYp6F3r42W5A9s9OcgNvva8xQaysKXlFytoqdYmQH6tF3toSUo0INq9AAAAAElFTkSuQmCC');
}

.c1 .DayPicker-NavButton--next {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAXRJREFUWAnN119ugjAcwPHWzJ1gnmxzB/BBE0n24m4xfNkTaOL7wOtsl3AXMMb+Vjaa1BG00N8fSEibPpAP3xAKKs2yjzTPH9RAjhEo9WzPr/Vm8zgE0+gXATAxxuxtqeJ9t5tIwv5AtQAApsfT6TPdbp+kUBcgVwvO51KqVhMkXKsVJFXrOkigVhCIs1Y4iKlWZxB1rX4gwlpRIIpa8SDkWmggrFq4IIRaJKCYWnSgnrXIQV1r8YD+1Vrn+bReagysIFfLABRt31v8oBu1xEBttfRbltmfjgEcWh9snUS2kNdBK6WN1vrOWxObWsz+fjxevsxmB1GQDfINWiev83nhaoiB/CoOU438oPrhXS0WpQ9xc1ZQWxWHqUYe0I0qrKCQKjygDlXIQV2r0IF6ViEBxVTBBSFUQQNhVYkHIVeJAtkNsbQ7c1LtzP6FsObhb2rCKv7NBIGoq4SDmKoEgTirXAcJVGkFSVVpgoSrXICGUMUH/QBZNSUy5XWUhwAAAABJRU5ErkJggg==');
}

.c1 .DayPicker-NavButton--interactionDisabled {
  display: none;
}

.c1 .DayPicker-Caption {
  margin-bottom: 0.5rem;
  padding: 0 0.5rem;
  text-align: left;
  color: inherit;
}

.c1 .DayPicker-Caption > div {
  font-weight: 500;
  font-size: large;
}

.c1 .DayPicker-Weekdays {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1rem;
}

.c1 .DayPicker-WeekdaysRow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Weekday {
  color: hsl(0,0%,75%);
  text-align: center;
  height: 40px;
  width: 40px;
  box-sizing: border-box;
}

.c1 .DayPicker-Weekday abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .DayPicker-Body {
  display: block;
}

.c1 .DayPicker-Week {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Day {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0.1rem 0;
  padding: 0.4rem 0.5rem;
  border-radius: 50%;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  pointer-events: auto;
  box-sizing: border-box;
  height: 40px;
  width: 40px;
  position: relative;
}

.c1 .DayPicker-Day:not(.DayPicker-Day--disabled):hover {
  background-color: hsl(207,90%,54%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-WeekNumber {
  font-size: small;
  padding: 0.5rem;
  min-width: 1rem;
  pointer-events: auto;
  border-right: 1px solid hsl(0,0%,75%);
  color: hsl(0,0%,50%);
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
}

.c1 .DayPicker--interactionDisabled .DayPicker-Day {
  cursor: default;
}

.c1 .DayPicker-Footer {
  padding-top: 0.5em;
}

.c1 .DayPicker-TodayButton {
  border: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #4A90E2;
  font-size: 0.875em;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-Day--today {
  position: relative;
}

.c1 .DayPicker-Day--today:after {
  position: absolute;
  content: "";
  height: calc(100% - 2px);
  width: calc(100% - 2px);
  top: 0;
  left: 0;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 50%;
}

.c1 .DayPicker-Day--selected {
  background-color: hsl(186.8,100%,41.6%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-Day--selected.DayPicker-Day--start {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1 .DayPicker-Day--selected.DayPicker-Day--end {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1 .DayPicker-Day--outside {
  color: hsl(0,0%,40%);
  cursor: default;
  background: transparent !important;
  visibility: hidden;
  pointer-events: none;
}

.c1 .DayPicker-Day--disabled {
  color: hsl(0,0%,75%);
  cursor: default;
  pointer-events: none;
}

.c1.c1.c1 .DayPickerInput {
  box-sizing: border-box;
  width: 100%;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

.c1 ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1 .DayPickerInput-OverlayWrapper {
  pointer-events: none;
  left: 1rem;
  right: auto;
}

.c1 .DayPickerInput-OverlayWrapper .DayPickerInput-Overlay {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  display: block;
}

.c1 .DayPicker-Months {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
    multiple={false}
    name=""
  >
    <div
      className="DayPickerInput"
      style={
        Object {
          "container": Object {
            "input": Object {
              "padding": "1rem",
            },
          },
        }
      }
    >
      <input
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="M/D/YYYY"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateField Component base should return a DateField Input object with custom menu overlay values 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
  width: 100%;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
}

.c1 .DayPicker {
  background-color: hsl(0,0%,100%);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
  display: inline-block;
  font: inherit;
  outline: 0;
}

.c1 .DayPicker-wrapper {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .DayPicker-Months {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .DayPicker-Month {
  margin: 1rem;
}

.c1 .DayPickerInput-OverlayWrapper {
  position: absolute;
  z-index: 1010;
  max-width: 100%;
}

.c1 .DayPicker-NavButton {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  left: auto;
  display: inline-block;
  margin-top: 2px;
  width: 1.25rem;
  height: 1.25rem;
  background-position: center;
  background-size: 50%;
  background-repeat: no-repeat;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-NavButton:hover {
  opacity: 0.8;
}

.c1 .DayPicker-NavButton--prev {
  margin-right: 1.5rem;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAVVJREFUWAnN2G0KgjAYwPHpGfRkaZeqvgQaK+hY3SUHrk1YzNLay/OiEFp92I+/Mp2F2Mh2lLISWnflFjzH263RQjzMZ19wgs73ez0o1WmtW+dgA01VxrE3p6l2GLsnBy1VYQOtVSEH/atCCgqpQgKKqYIOiq2CBkqtggLKqQIKgqgCBjpJ2Y5CdJ+zrT9A7HHSTA1dxUdHgzCqJIEwq0SDsKsEg6iqBIEoq/wEcVRZBXFV+QJxV5mBtlDFB5VjYTaGZ2sf4R9PM7U9ZU+lLuaetPP/5Die3ToO1+u+MKtHs06qODB2zBnI/jBd4MPQm1VkY79Tb18gB+C62FdBFsZR6yeIo1YQiLJWMIiqVjQIu1YSCLNWFgijVjYIuhYYCKoWKAiiFgoopxYaKLUWOii2FgkophYp6F3r42W5A9s9OcgNvva8xQaysKXlFytoqdYmQH6tF3toSUo0INq9AAAAAElFTkSuQmCC');
}

.c1 .DayPicker-NavButton--next {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAXRJREFUWAnN119ugjAcwPHWzJ1gnmxzB/BBE0n24m4xfNkTaOL7wOtsl3AXMMb+Vjaa1BG00N8fSEibPpAP3xAKKs2yjzTPH9RAjhEo9WzPr/Vm8zgE0+gXATAxxuxtqeJ9t5tIwv5AtQAApsfT6TPdbp+kUBcgVwvO51KqVhMkXKsVJFXrOkigVhCIs1Y4iKlWZxB1rX4gwlpRIIpa8SDkWmggrFq4IIRaJKCYWnSgnrXIQV1r8YD+1Vrn+bReagysIFfLABRt31v8oBu1xEBttfRbltmfjgEcWh9snUS2kNdBK6WN1vrOWxObWsz+fjxevsxmB1GQDfINWiev83nhaoiB/CoOU438oPrhXS0WpQ9xc1ZQWxWHqUYe0I0qrKCQKjygDlXIQV2r0IF6ViEBxVTBBSFUQQNhVYkHIVeJAtkNsbQ7c1LtzP6FsObhb2rCKv7NBIGoq4SDmKoEgTirXAcJVGkFSVVpgoSrXICGUMUH/QBZNSUy5XWUhwAAAABJRU5ErkJggg==');
}

.c1 .DayPicker-NavButton--interactionDisabled {
  display: none;
}

.c1 .DayPicker-Caption {
  margin-bottom: 0.5rem;
  padding: 0 0.5rem;
  text-align: left;
  color: inherit;
}

.c1 .DayPicker-Caption > div {
  font-weight: 500;
  font-size: large;
}

.c1 .DayPicker-Weekdays {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1rem;
}

.c1 .DayPicker-WeekdaysRow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Weekday {
  color: hsl(0,0%,75%);
  text-align: center;
  height: 40px;
  width: 40px;
  box-sizing: border-box;
}

.c1 .DayPicker-Weekday abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .DayPicker-Body {
  display: block;
}

.c1 .DayPicker-Week {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Day {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0.1rem 0;
  padding: 0.4rem 0.5rem;
  border-radius: 50%;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  pointer-events: auto;
  box-sizing: border-box;
  height: 40px;
  width: 40px;
  position: relative;
}

.c1 .DayPicker-Day:not(.DayPicker-Day--disabled):hover {
  background-color: hsl(207,90%,54%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-WeekNumber {
  font-size: small;
  padding: 0.5rem;
  min-width: 1rem;
  pointer-events: auto;
  border-right: 1px solid hsl(0,0%,75%);
  color: hsl(0,0%,50%);
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
}

.c1 .DayPicker--interactionDisabled .DayPicker-Day {
  cursor: default;
}

.c1 .DayPicker-Footer {
  padding-top: 0.5em;
}

.c1 .DayPicker-TodayButton {
  border: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #4A90E2;
  font-size: 0.875em;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-Day--today {
  position: relative;
}

.c1 .DayPicker-Day--today:after {
  position: absolute;
  content: "";
  height: calc(100% - 2px);
  width: calc(100% - 2px);
  top: 0;
  left: 0;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 50%;
}

.c1 .DayPicker-Day--selected {
  background-color: hsl(186.8,100%,41.6%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-Day--selected.DayPicker-Day--start {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1 .DayPicker-Day--selected.DayPicker-Day--end {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1 .DayPicker-Day--outside {
  color: hsl(0,0%,40%);
  cursor: default;
  background: transparent !important;
  visibility: hidden;
  pointer-events: none;
}

.c1 .DayPicker-Day--disabled {
  color: hsl(0,0%,75%);
  cursor: default;
  pointer-events: none;
}

.c1.c1.c1 .DayPickerInput {
  box-sizing: border-box;
  width: 100%;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1 .DayPickerInput-OverlayWrapper {
  pointer-events: none;
  left: 1rem;
  right: auto;
  bottom: auto;
  left: 100px;
  right: 10px;
  top: auto;
}

.c1 .DayPickerInput-OverlayWrapper .DayPickerInput-Overlay {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  display: block;
}

.c1 .DayPicker-Months {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (min-width:40em) {
  .c1 .DayPickerInput-OverlayWrapper {
    bottom: 20px;
    left: auto;
    top: 20px;
  }
}

@media screen and (min-width:52em) {
  .c1 .DayPickerInput-OverlayWrapper {
    left: 300px;
    right: 30px;
  }
}

@media screen and (min-width:64em) {
  .c1 .DayPickerInput-OverlayWrapper {
    bottom: 40px;
    right: auto;
    top: auto;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
    multiple={false}
    name=""
  >
    <div
      className="DayPickerInput"
      style={
        Object {
          "container": Object {
            "input": Object {
              "padding": "1rem",
            },
          },
        }
      }
    >
      <input
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="M/D/YYYY"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateField Component base should return a DateField object as Calendar 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
  width: 100%;
  background: transparent;
  margin-top: 1rem;
}

.c1 .DayPicker {
  background-color: hsl(0,0%,100%);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
  display: inline-block;
  font: inherit;
  outline: 0;
}

.c1 .DayPicker-wrapper {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .DayPicker-Months {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .DayPicker-Month {
  margin: 1rem;
}

.c1 .DayPickerInput-OverlayWrapper {
  position: absolute;
  z-index: 1010;
  max-width: 100%;
}

.c1 .DayPicker-NavButton {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  left: auto;
  display: inline-block;
  margin-top: 2px;
  width: 1.25rem;
  height: 1.25rem;
  background-position: center;
  background-size: 50%;
  background-repeat: no-repeat;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-NavButton:hover {
  opacity: 0.8;
}

.c1 .DayPicker-NavButton--prev {
  margin-right: 1.5rem;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAVVJREFUWAnN2G0KgjAYwPHpGfRkaZeqvgQaK+hY3SUHrk1YzNLay/OiEFp92I+/Mp2F2Mh2lLISWnflFjzH263RQjzMZ19wgs73ez0o1WmtW+dgA01VxrE3p6l2GLsnBy1VYQOtVSEH/atCCgqpQgKKqYIOiq2CBkqtggLKqQIKgqgCBjpJ2Y5CdJ+zrT9A7HHSTA1dxUdHgzCqJIEwq0SDsKsEg6iqBIEoq/wEcVRZBXFV+QJxV5mBtlDFB5VjYTaGZ2sf4R9PM7U9ZU+lLuaetPP/5Die3ToO1+u+MKtHs06qODB2zBnI/jBd4MPQm1VkY79Tb18gB+C62FdBFsZR6yeIo1YQiLJWMIiqVjQIu1YSCLNWFgijVjYIuhYYCKoWKAiiFgoopxYaKLUWOii2FgkophYp6F3r42W5A9s9OcgNvva8xQaysKXlFytoqdYmQH6tF3toSUo0INq9AAAAAElFTkSuQmCC');
}

.c1 .DayPicker-NavButton--next {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAXRJREFUWAnN119ugjAcwPHWzJ1gnmxzB/BBE0n24m4xfNkTaOL7wOtsl3AXMMb+Vjaa1BG00N8fSEibPpAP3xAKKs2yjzTPH9RAjhEo9WzPr/Vm8zgE0+gXATAxxuxtqeJ9t5tIwv5AtQAApsfT6TPdbp+kUBcgVwvO51KqVhMkXKsVJFXrOkigVhCIs1Y4iKlWZxB1rX4gwlpRIIpa8SDkWmggrFq4IIRaJKCYWnSgnrXIQV1r8YD+1Vrn+bReagysIFfLABRt31v8oBu1xEBttfRbltmfjgEcWh9snUS2kNdBK6WN1vrOWxObWsz+fjxevsxmB1GQDfINWiev83nhaoiB/CoOU438oPrhXS0WpQ9xc1ZQWxWHqUYe0I0qrKCQKjygDlXIQV2r0IF6ViEBxVTBBSFUQQNhVYkHIVeJAtkNsbQ7c1LtzP6FsObhb2rCKv7NBIGoq4SDmKoEgTirXAcJVGkFSVVpgoSrXICGUMUH/QBZNSUy5XWUhwAAAABJRU5ErkJggg==');
}

.c1 .DayPicker-NavButton--interactionDisabled {
  display: none;
}

.c1 .DayPicker-Caption {
  margin-bottom: 0.5rem;
  padding: 0 0.5rem;
  text-align: left;
  color: inherit;
}

.c1 .DayPicker-Caption > div {
  font-weight: 500;
  font-size: large;
}

.c1 .DayPicker-Weekdays {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1rem;
}

.c1 .DayPicker-WeekdaysRow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Weekday {
  color: hsl(0,0%,75%);
  text-align: center;
  height: 40px;
  width: 40px;
  box-sizing: border-box;
}

.c1 .DayPicker-Weekday abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .DayPicker-Body {
  display: block;
}

.c1 .DayPicker-Week {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Day {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0.1rem 0;
  padding: 0.4rem 0.5rem;
  border-radius: 50%;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  pointer-events: auto;
  box-sizing: border-box;
  height: 40px;
  width: 40px;
  position: relative;
}

.c1 .DayPicker-Day:not(.DayPicker-Day--disabled):hover {
  background-color: hsl(207,90%,54%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-WeekNumber {
  font-size: small;
  padding: 0.5rem;
  min-width: 1rem;
  pointer-events: auto;
  border-right: 1px solid hsl(0,0%,75%);
  color: hsl(0,0%,50%);
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
}

.c1 .DayPicker--interactionDisabled .DayPicker-Day {
  cursor: default;
}

.c1 .DayPicker-Footer {
  padding-top: 0.5em;
}

.c1 .DayPicker-TodayButton {
  border: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #4A90E2;
  font-size: 0.875em;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-Day--today {
  position: relative;
}

.c1 .DayPicker-Day--today:after {
  position: absolute;
  content: "";
  height: calc(100% - 2px);
  width: calc(100% - 2px);
  top: 0;
  left: 0;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 50%;
}

.c1 .DayPicker-Day--selected {
  background-color: hsl(186.8,100%,41.6%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-Day--selected.DayPicker-Day--start {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1 .DayPicker-Day--selected.DayPicker-Day--end {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1 .DayPicker-Day--outside {
  color: hsl(0,0%,40%);
  cursor: default;
  background: transparent !important;
  visibility: hidden;
  pointer-events: none;
}

.c1 .DayPicker-Day--disabled {
  color: hsl(0,0%,75%);
  cursor: default;
  pointer-events: none;
}

.c1.c1.c1 .DayPickerInput {
  box-sizing: border-box;
  width: 100%;
}

.c1 + label {
  position: absolute;
  top: 0;
}

.c1 .DayPickerInput-OverlayWrapper {
  pointer-events: none;
  left: 1rem;
  right: auto;
}

.c1 .DayPickerInput-OverlayWrapper .DayPickerInput-Overlay {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  display: block;
}

.c1 .DayPicker-Months {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
    multiple={false}
    name=""
  >
    <div
      className="DayPicker"
      lang="en"
    >
      <div
        className="DayPicker-wrapper"
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="DayPicker-NavBar"
        >
          <span
            aria-label="Previous Month"
            className="DayPicker-NavButton DayPicker-NavButton--prev"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          />
          <span
            aria-label="Next Month"
            className="DayPicker-NavButton DayPicker-NavButton--next"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          />
        </div>
        <div
          className="DayPicker-Months"
        >
          <div
            className="DayPicker-Month"
            role="grid"
          >
            <div
              className="DayPicker-Caption"
              role="heading"
            >
              <div
                onKeyUp={[Function]}
              >
                January 2020
              </div>
            </div>
            <div
              className="DayPicker-Weekdays"
              role="rowgroup"
            >
              <div
                className="DayPicker-WeekdaysRow"
                role="row"
              >
                <div
                  className="DayPicker-Weekday"
                  role="columnheader"
                >
                  <abbr
                    title="Sunday"
                  >
                    Su
                  </abbr>
                </div>
                <div
                  className="DayPicker-Weekday"
                  role="columnheader"
                >
                  <abbr
                    title="Monday"
                  >
                    Mo
                  </abbr>
                </div>
                <div
                  className="DayPicker-Weekday"
                  role="columnheader"
                >
                  <abbr
                    title="Tuesday"
                  >
                    Tu
                  </abbr>
                </div>
                <div
                  className="DayPicker-Weekday"
                  role="columnheader"
                >
                  <abbr
                    title="Wednesday"
                  >
                    We
                  </abbr>
                </div>
                <div
                  className="DayPicker-Weekday"
                  role="columnheader"
                >
                  <abbr
                    title="Thursday"
                  >
                    Th
                  </abbr>
                </div>
                <div
                  className="DayPicker-Weekday"
                  role="columnheader"
                >
                  <abbr
                    title="Friday"
                  >
                    Fr
                  </abbr>
                </div>
                <div
                  className="DayPicker-Weekday"
                  role="columnheader"
                >
                  <abbr
                    title="Saturday"
                  >
                    Sa
                  </abbr>
                </div>
              </div>
            </div>
            <div
              className="DayPicker-Body"
              role="rowgroup"
            >
              <div
                className="DayPicker-Week"
                role="row"
              >
                <div
                  aria-disabled={true}
                  className="DayPicker-Day DayPicker-Day--outside"
                />
                <div
                  aria-disabled={true}
                  className="DayPicker-Day DayPicker-Day--outside"
                />
                <div
                  aria-disabled={true}
                  className="DayPicker-Day DayPicker-Day--outside"
                />
                <div
                  aria-disabled={false}
                  aria-label="Wed Jan 1, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={0}
                >
                  1
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Thu Jan 2, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  2
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Fri Jan 3, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  3
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Sat Jan 4, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  4
                </div>
              </div>
              <div
                className="DayPicker-Week"
                role="row"
              >
                <div
                  aria-disabled={false}
                  aria-label="Sun Jan 5, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  5
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Mon Jan 6, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  6
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Tue Jan 7, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  7
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Wed Jan 8, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  8
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Thu Jan 9, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  9
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Fri Jan 10, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  10
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Sat Jan 11, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  11
                </div>
              </div>
              <div
                className="DayPicker-Week"
                role="row"
              >
                <div
                  aria-disabled={false}
                  aria-label="Sun Jan 12, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  12
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Mon Jan 13, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  13
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Tue Jan 14, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  14
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Wed Jan 15, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  15
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Thu Jan 16, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  16
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Fri Jan 17, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  17
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Sat Jan 18, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  18
                </div>
              </div>
              <div
                className="DayPicker-Week"
                role="row"
              >
                <div
                  aria-disabled={false}
                  aria-label="Sun Jan 19, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  19
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Mon Jan 20, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  20
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Tue Jan 21, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  21
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Wed Jan 22, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  22
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Thu Jan 23, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  23
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Fri Jan 24, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  24
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Sat Jan 25, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  25
                </div>
              </div>
              <div
                className="DayPicker-Week"
                role="row"
              >
                <div
                  aria-disabled={false}
                  aria-label="Sun Jan 26, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  26
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Mon Jan 27, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  27
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Tue Jan 28, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  28
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Wed Jan 29, 2020"
                  aria-selected={false}
                  className="DayPicker-Day DayPicker-Day--today"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  29
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Thu Jan 30, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  30
                </div>
                <div
                  aria-disabled={false}
                  aria-label="Fri Jan 31, 2020"
                  aria-selected={false}
                  className="DayPicker-Day"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="gridcell"
                  tabIndex={-1}
                >
                  31
                </div>
                <div
                  aria-disabled={true}
                  className="DayPicker-Day DayPicker-Day--outside"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateField Component base should return a DateField object as Input 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
  width: 100%;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
}

.c1 .DayPicker {
  background-color: hsl(0,0%,100%);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
  display: inline-block;
  font: inherit;
  outline: 0;
}

.c1 .DayPicker-wrapper {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .DayPicker-Months {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .DayPicker-Month {
  margin: 1rem;
}

.c1 .DayPickerInput-OverlayWrapper {
  position: absolute;
  z-index: 1010;
  max-width: 100%;
}

.c1 .DayPicker-NavButton {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  left: auto;
  display: inline-block;
  margin-top: 2px;
  width: 1.25rem;
  height: 1.25rem;
  background-position: center;
  background-size: 50%;
  background-repeat: no-repeat;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-NavButton:hover {
  opacity: 0.8;
}

.c1 .DayPicker-NavButton--prev {
  margin-right: 1.5rem;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAVVJREFUWAnN2G0KgjAYwPHpGfRkaZeqvgQaK+hY3SUHrk1YzNLay/OiEFp92I+/Mp2F2Mh2lLISWnflFjzH263RQjzMZ19wgs73ez0o1WmtW+dgA01VxrE3p6l2GLsnBy1VYQOtVSEH/atCCgqpQgKKqYIOiq2CBkqtggLKqQIKgqgCBjpJ2Y5CdJ+zrT9A7HHSTA1dxUdHgzCqJIEwq0SDsKsEg6iqBIEoq/wEcVRZBXFV+QJxV5mBtlDFB5VjYTaGZ2sf4R9PM7U9ZU+lLuaetPP/5Die3ToO1+u+MKtHs06qODB2zBnI/jBd4MPQm1VkY79Tb18gB+C62FdBFsZR6yeIo1YQiLJWMIiqVjQIu1YSCLNWFgijVjYIuhYYCKoWKAiiFgoopxYaKLUWOii2FgkophYp6F3r42W5A9s9OcgNvva8xQaysKXlFytoqdYmQH6tF3toSUo0INq9AAAAAElFTkSuQmCC');
}

.c1 .DayPicker-NavButton--next {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAXRJREFUWAnN119ugjAcwPHWzJ1gnmxzB/BBE0n24m4xfNkTaOL7wOtsl3AXMMb+Vjaa1BG00N8fSEibPpAP3xAKKs2yjzTPH9RAjhEo9WzPr/Vm8zgE0+gXATAxxuxtqeJ9t5tIwv5AtQAApsfT6TPdbp+kUBcgVwvO51KqVhMkXKsVJFXrOkigVhCIs1Y4iKlWZxB1rX4gwlpRIIpa8SDkWmggrFq4IIRaJKCYWnSgnrXIQV1r8YD+1Vrn+bReagysIFfLABRt31v8oBu1xEBttfRbltmfjgEcWh9snUS2kNdBK6WN1vrOWxObWsz+fjxevsxmB1GQDfINWiev83nhaoiB/CoOU438oPrhXS0WpQ9xc1ZQWxWHqUYe0I0qrKCQKjygDlXIQV2r0IF6ViEBxVTBBSFUQQNhVYkHIVeJAtkNsbQ7c1LtzP6FsObhb2rCKv7NBIGoq4SDmKoEgTirXAcJVGkFSVVpgoSrXICGUMUH/QBZNSUy5XWUhwAAAABJRU5ErkJggg==');
}

.c1 .DayPicker-NavButton--interactionDisabled {
  display: none;
}

.c1 .DayPicker-Caption {
  margin-bottom: 0.5rem;
  padding: 0 0.5rem;
  text-align: left;
  color: inherit;
}

.c1 .DayPicker-Caption > div {
  font-weight: 500;
  font-size: large;
}

.c1 .DayPicker-Weekdays {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1rem;
}

.c1 .DayPicker-WeekdaysRow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Weekday {
  color: hsl(0,0%,75%);
  text-align: center;
  height: 40px;
  width: 40px;
  box-sizing: border-box;
}

.c1 .DayPicker-Weekday abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .DayPicker-Body {
  display: block;
}

.c1 .DayPicker-Week {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Day {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0.1rem 0;
  padding: 0.4rem 0.5rem;
  border-radius: 50%;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  pointer-events: auto;
  box-sizing: border-box;
  height: 40px;
  width: 40px;
  position: relative;
}

.c1 .DayPicker-Day:not(.DayPicker-Day--disabled):hover {
  background-color: hsl(207,90%,54%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-WeekNumber {
  font-size: small;
  padding: 0.5rem;
  min-width: 1rem;
  pointer-events: auto;
  border-right: 1px solid hsl(0,0%,75%);
  color: hsl(0,0%,50%);
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
}

.c1 .DayPicker--interactionDisabled .DayPicker-Day {
  cursor: default;
}

.c1 .DayPicker-Footer {
  padding-top: 0.5em;
}

.c1 .DayPicker-TodayButton {
  border: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #4A90E2;
  font-size: 0.875em;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-Day--today {
  position: relative;
}

.c1 .DayPicker-Day--today:after {
  position: absolute;
  content: "";
  height: calc(100% - 2px);
  width: calc(100% - 2px);
  top: 0;
  left: 0;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 50%;
}

.c1 .DayPicker-Day--selected {
  background-color: hsl(186.8,100%,41.6%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-Day--selected.DayPicker-Day--start {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1 .DayPicker-Day--selected.DayPicker-Day--end {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1 .DayPicker-Day--outside {
  color: hsl(0,0%,40%);
  cursor: default;
  background: transparent !important;
  visibility: hidden;
  pointer-events: none;
}

.c1 .DayPicker-Day--disabled {
  color: hsl(0,0%,75%);
  cursor: default;
  pointer-events: none;
}

.c1.c1.c1 .DayPickerInput {
  box-sizing: border-box;
  width: 100%;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1 .DayPickerInput-OverlayWrapper {
  pointer-events: none;
  left: 1rem;
  right: auto;
}

.c1 .DayPickerInput-OverlayWrapper .DayPickerInput-Overlay {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  display: block;
}

.c1 .DayPicker-Months {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
    multiple={false}
    name=""
  >
    <div
      className="DayPickerInput"
      style={
        Object {
          "container": Object {
            "input": Object {
              "padding": "1rem",
            },
          },
        }
      }
    >
      <input
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="M/D/YYYY"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateField Component base should return a DateField object as Input displaying value as 12/18/2019 with default format 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
  width: 100%;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
}

.c1 .DayPicker {
  background-color: hsl(0,0%,100%);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
  display: inline-block;
  font: inherit;
  outline: 0;
}

.c1 .DayPicker-wrapper {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .DayPicker-Months {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .DayPicker-Month {
  margin: 1rem;
}

.c1 .DayPickerInput-OverlayWrapper {
  position: absolute;
  z-index: 1010;
  max-width: 100%;
}

.c1 .DayPicker-NavButton {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  left: auto;
  display: inline-block;
  margin-top: 2px;
  width: 1.25rem;
  height: 1.25rem;
  background-position: center;
  background-size: 50%;
  background-repeat: no-repeat;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-NavButton:hover {
  opacity: 0.8;
}

.c1 .DayPicker-NavButton--prev {
  margin-right: 1.5rem;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAVVJREFUWAnN2G0KgjAYwPHpGfRkaZeqvgQaK+hY3SUHrk1YzNLay/OiEFp92I+/Mp2F2Mh2lLISWnflFjzH263RQjzMZ19wgs73ez0o1WmtW+dgA01VxrE3p6l2GLsnBy1VYQOtVSEH/atCCgqpQgKKqYIOiq2CBkqtggLKqQIKgqgCBjpJ2Y5CdJ+zrT9A7HHSTA1dxUdHgzCqJIEwq0SDsKsEg6iqBIEoq/wEcVRZBXFV+QJxV5mBtlDFB5VjYTaGZ2sf4R9PM7U9ZU+lLuaetPP/5Die3ToO1+u+MKtHs06qODB2zBnI/jBd4MPQm1VkY79Tb18gB+C62FdBFsZR6yeIo1YQiLJWMIiqVjQIu1YSCLNWFgijVjYIuhYYCKoWKAiiFgoopxYaKLUWOii2FgkophYp6F3r42W5A9s9OcgNvva8xQaysKXlFytoqdYmQH6tF3toSUo0INq9AAAAAElFTkSuQmCC');
}

.c1 .DayPicker-NavButton--next {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAXRJREFUWAnN119ugjAcwPHWzJ1gnmxzB/BBE0n24m4xfNkTaOL7wOtsl3AXMMb+Vjaa1BG00N8fSEibPpAP3xAKKs2yjzTPH9RAjhEo9WzPr/Vm8zgE0+gXATAxxuxtqeJ9t5tIwv5AtQAApsfT6TPdbp+kUBcgVwvO51KqVhMkXKsVJFXrOkigVhCIs1Y4iKlWZxB1rX4gwlpRIIpa8SDkWmggrFq4IIRaJKCYWnSgnrXIQV1r8YD+1Vrn+bReagysIFfLABRt31v8oBu1xEBttfRbltmfjgEcWh9snUS2kNdBK6WN1vrOWxObWsz+fjxevsxmB1GQDfINWiev83nhaoiB/CoOU438oPrhXS0WpQ9xc1ZQWxWHqUYe0I0qrKCQKjygDlXIQV2r0IF6ViEBxVTBBSFUQQNhVYkHIVeJAtkNsbQ7c1LtzP6FsObhb2rCKv7NBIGoq4SDmKoEgTirXAcJVGkFSVVpgoSrXICGUMUH/QBZNSUy5XWUhwAAAABJRU5ErkJggg==');
}

.c1 .DayPicker-NavButton--interactionDisabled {
  display: none;
}

.c1 .DayPicker-Caption {
  margin-bottom: 0.5rem;
  padding: 0 0.5rem;
  text-align: left;
  color: inherit;
}

.c1 .DayPicker-Caption > div {
  font-weight: 500;
  font-size: large;
}

.c1 .DayPicker-Weekdays {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1rem;
}

.c1 .DayPicker-WeekdaysRow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Weekday {
  color: hsl(0,0%,75%);
  text-align: center;
  height: 40px;
  width: 40px;
  box-sizing: border-box;
}

.c1 .DayPicker-Weekday abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .DayPicker-Body {
  display: block;
}

.c1 .DayPicker-Week {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Day {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0.1rem 0;
  padding: 0.4rem 0.5rem;
  border-radius: 50%;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  pointer-events: auto;
  box-sizing: border-box;
  height: 40px;
  width: 40px;
  position: relative;
}

.c1 .DayPicker-Day:not(.DayPicker-Day--disabled):hover {
  background-color: hsl(207,90%,54%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-WeekNumber {
  font-size: small;
  padding: 0.5rem;
  min-width: 1rem;
  pointer-events: auto;
  border-right: 1px solid hsl(0,0%,75%);
  color: hsl(0,0%,50%);
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
}

.c1 .DayPicker--interactionDisabled .DayPicker-Day {
  cursor: default;
}

.c1 .DayPicker-Footer {
  padding-top: 0.5em;
}

.c1 .DayPicker-TodayButton {
  border: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #4A90E2;
  font-size: 0.875em;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-Day--today {
  position: relative;
}

.c1 .DayPicker-Day--today:after {
  position: absolute;
  content: "";
  height: calc(100% - 2px);
  width: calc(100% - 2px);
  top: 0;
  left: 0;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 50%;
}

.c1 .DayPicker-Day--selected {
  background-color: hsl(186.8,100%,41.6%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-Day--selected.DayPicker-Day--start {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1 .DayPicker-Day--selected.DayPicker-Day--end {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1 .DayPicker-Day--outside {
  color: hsl(0,0%,40%);
  cursor: default;
  background: transparent !important;
  visibility: hidden;
  pointer-events: none;
}

.c1 .DayPicker-Day--disabled {
  color: hsl(0,0%,75%);
  cursor: default;
  pointer-events: none;
}

.c1.c1.c1 .DayPickerInput {
  box-sizing: border-box;
  width: 100%;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1 .DayPickerInput-OverlayWrapper {
  pointer-events: none;
  left: 1rem;
  right: auto;
}

.c1 .DayPickerInput-OverlayWrapper .DayPickerInput-Overlay {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  display: block;
}

.c1 .DayPicker-Months {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
    multiple={false}
    name=""
  >
    <div
      className="DayPickerInput"
      style={
        Object {
          "container": Object {
            "input": Object {
              "padding": "1rem",
            },
          },
        }
      }
    >
      <input
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="M/D/YYYY"
        value="12/18/2019"
      />
    </div>
  </div>
</div>
`;

exports[`DateField Component base should return a DateField object as Input displaying value as 2019-12-18 with Format YYYY-MM-DD 1`] = `
.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
  width: 100%;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
}

.c1 .DayPicker {
  background-color: hsl(0,0%,100%);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
  display: inline-block;
  font: inherit;
  outline: 0;
}

.c1 .DayPicker-wrapper {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .DayPicker-Months {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .DayPicker-Month {
  margin: 1rem;
}

.c1 .DayPickerInput-OverlayWrapper {
  position: absolute;
  z-index: 1010;
  max-width: 100%;
}

.c1 .DayPicker-NavButton {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  left: auto;
  display: inline-block;
  margin-top: 2px;
  width: 1.25rem;
  height: 1.25rem;
  background-position: center;
  background-size: 50%;
  background-repeat: no-repeat;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-NavButton:hover {
  opacity: 0.8;
}

.c1 .DayPicker-NavButton--prev {
  margin-right: 1.5rem;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAVVJREFUWAnN2G0KgjAYwPHpGfRkaZeqvgQaK+hY3SUHrk1YzNLay/OiEFp92I+/Mp2F2Mh2lLISWnflFjzH263RQjzMZ19wgs73ez0o1WmtW+dgA01VxrE3p6l2GLsnBy1VYQOtVSEH/atCCgqpQgKKqYIOiq2CBkqtggLKqQIKgqgCBjpJ2Y5CdJ+zrT9A7HHSTA1dxUdHgzCqJIEwq0SDsKsEg6iqBIEoq/wEcVRZBXFV+QJxV5mBtlDFB5VjYTaGZ2sf4R9PM7U9ZU+lLuaetPP/5Die3ToO1+u+MKtHs06qODB2zBnI/jBd4MPQm1VkY79Tb18gB+C62FdBFsZR6yeIo1YQiLJWMIiqVjQIu1YSCLNWFgijVjYIuhYYCKoWKAiiFgoopxYaKLUWOii2FgkophYp6F3r42W5A9s9OcgNvva8xQaysKXlFytoqdYmQH6tF3toSUo0INq9AAAAAElFTkSuQmCC');
}

.c1 .DayPicker-NavButton--next {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAXRJREFUWAnN119ugjAcwPHWzJ1gnmxzB/BBE0n24m4xfNkTaOL7wOtsl3AXMMb+Vjaa1BG00N8fSEibPpAP3xAKKs2yjzTPH9RAjhEo9WzPr/Vm8zgE0+gXATAxxuxtqeJ9t5tIwv5AtQAApsfT6TPdbp+kUBcgVwvO51KqVhMkXKsVJFXrOkigVhCIs1Y4iKlWZxB1rX4gwlpRIIpa8SDkWmggrFq4IIRaJKCYWnSgnrXIQV1r8YD+1Vrn+bReagysIFfLABRt31v8oBu1xEBttfRbltmfjgEcWh9snUS2kNdBK6WN1vrOWxObWsz+fjxevsxmB1GQDfINWiev83nhaoiB/CoOU438oPrhXS0WpQ9xc1ZQWxWHqUYe0I0qrKCQKjygDlXIQV2r0IF6ViEBxVTBBSFUQQNhVYkHIVeJAtkNsbQ7c1LtzP6FsObhb2rCKv7NBIGoq4SDmKoEgTirXAcJVGkFSVVpgoSrXICGUMUH/QBZNSUy5XWUhwAAAABJRU5ErkJggg==');
}

.c1 .DayPicker-NavButton--interactionDisabled {
  display: none;
}

.c1 .DayPicker-Caption {
  margin-bottom: 0.5rem;
  padding: 0 0.5rem;
  text-align: left;
  color: inherit;
}

.c1 .DayPicker-Caption > div {
  font-weight: 500;
  font-size: large;
}

.c1 .DayPicker-Weekdays {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1rem;
}

.c1 .DayPicker-WeekdaysRow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Weekday {
  color: hsl(0,0%,75%);
  text-align: center;
  height: 40px;
  width: 40px;
  box-sizing: border-box;
}

.c1 .DayPicker-Weekday abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .DayPicker-Body {
  display: block;
}

.c1 .DayPicker-Week {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Day {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0.1rem 0;
  padding: 0.4rem 0.5rem;
  border-radius: 50%;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  pointer-events: auto;
  box-sizing: border-box;
  height: 40px;
  width: 40px;
  position: relative;
}

.c1 .DayPicker-Day:not(.DayPicker-Day--disabled):hover {
  background-color: hsl(207,90%,54%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-WeekNumber {
  font-size: small;
  padding: 0.5rem;
  min-width: 1rem;
  pointer-events: auto;
  border-right: 1px solid hsl(0,0%,75%);
  color: hsl(0,0%,50%);
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
}

.c1 .DayPicker--interactionDisabled .DayPicker-Day {
  cursor: default;
}

.c1 .DayPicker-Footer {
  padding-top: 0.5em;
}

.c1 .DayPicker-TodayButton {
  border: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #4A90E2;
  font-size: 0.875em;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-Day--today {
  position: relative;
}

.c1 .DayPicker-Day--today:after {
  position: absolute;
  content: "";
  height: calc(100% - 2px);
  width: calc(100% - 2px);
  top: 0;
  left: 0;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 50%;
}

.c1 .DayPicker-Day--selected {
  background-color: hsl(186.8,100%,41.6%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-Day--selected.DayPicker-Day--start {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1 .DayPicker-Day--selected.DayPicker-Day--end {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1 .DayPicker-Day--outside {
  color: hsl(0,0%,40%);
  cursor: default;
  background: transparent !important;
  visibility: hidden;
  pointer-events: none;
}

.c1 .DayPicker-Day--disabled {
  color: hsl(0,0%,75%);
  cursor: default;
  pointer-events: none;
}

.c1.c1.c1 .DayPickerInput {
  box-sizing: border-box;
  width: 100%;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1 .DayPickerInput-OverlayWrapper {
  pointer-events: none;
  left: 1rem;
  right: auto;
}

.c1 .DayPickerInput-OverlayWrapper .DayPickerInput-Overlay {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  display: block;
}

.c1 .DayPicker-Months {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <div
    className="c1"
    id=""
    multiple={false}
    name=""
  >
    <div
      className="DayPickerInput"
      style={
        Object {
          "container": Object {
            "input": Object {
              "padding": "1rem",
            },
          },
        }
      }
    >
      <input
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="YYYY-MM-DD"
        value="2019-12-18"
      />
    </div>
  </div>
</div>
`;

exports[`DateField Component base should return a DateFieldComponent object as Input with Japanese locale (日本語ロケールの入力としてDateFieldComponentオブジェクトを返す必要があります) 1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: transparent;
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(0,0%,90%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
  width: 100%;
  border: 0;
  border-bottom: 1px solid hsl(0,0%,25%);
  border-radius: 4px 4px 0 0;
  border-radius: 4px 4px 0 0;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1.5rem 1rem 0.5rem;
}

.c1 .DayPicker {
  background-color: hsl(0,0%,100%);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
  display: inline-block;
  font: inherit;
  outline: 0;
}

.c1 .DayPicker-wrapper {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .DayPicker-Months {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .DayPicker-Month {
  margin: 1rem;
}

.c1 .DayPickerInput-OverlayWrapper {
  position: absolute;
  z-index: 1010;
  max-width: 100%;
}

.c1 .DayPicker-NavButton {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  left: auto;
  display: inline-block;
  margin-top: 2px;
  width: 1.25rem;
  height: 1.25rem;
  background-position: center;
  background-size: 50%;
  background-repeat: no-repeat;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-NavButton:hover {
  opacity: 0.8;
}

.c1 .DayPicker-NavButton--prev {
  margin-right: 1.5rem;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAVVJREFUWAnN2G0KgjAYwPHpGfRkaZeqvgQaK+hY3SUHrk1YzNLay/OiEFp92I+/Mp2F2Mh2lLISWnflFjzH263RQjzMZ19wgs73ez0o1WmtW+dgA01VxrE3p6l2GLsnBy1VYQOtVSEH/atCCgqpQgKKqYIOiq2CBkqtggLKqQIKgqgCBjpJ2Y5CdJ+zrT9A7HHSTA1dxUdHgzCqJIEwq0SDsKsEg6iqBIEoq/wEcVRZBXFV+QJxV5mBtlDFB5VjYTaGZ2sf4R9PM7U9ZU+lLuaetPP/5Die3ToO1+u+MKtHs06qODB2zBnI/jBd4MPQm1VkY79Tb18gB+C62FdBFsZR6yeIo1YQiLJWMIiqVjQIu1YSCLNWFgijVjYIuhYYCKoWKAiiFgoopxYaKLUWOii2FgkophYp6F3r42W5A9s9OcgNvva8xQaysKXlFytoqdYmQH6tF3toSUo0INq9AAAAAElFTkSuQmCC');
}

.c1 .DayPicker-NavButton--next {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAwCAYAAAB5R9gVAAAABGdBTUEAALGPC/xhBQAAAXRJREFUWAnN119ugjAcwPHWzJ1gnmxzB/BBE0n24m4xfNkTaOL7wOtsl3AXMMb+Vjaa1BG00N8fSEibPpAP3xAKKs2yjzTPH9RAjhEo9WzPr/Vm8zgE0+gXATAxxuxtqeJ9t5tIwv5AtQAApsfT6TPdbp+kUBcgVwvO51KqVhMkXKsVJFXrOkigVhCIs1Y4iKlWZxB1rX4gwlpRIIpa8SDkWmggrFq4IIRaJKCYWnSgnrXIQV1r8YD+1Vrn+bReagysIFfLABRt31v8oBu1xEBttfRbltmfjgEcWh9snUS2kNdBK6WN1vrOWxObWsz+fjxevsxmB1GQDfINWiev83nhaoiB/CoOU438oPrhXS0WpQ9xc1ZQWxWHqUYe0I0qrKCQKjygDlXIQV2r0IF6ViEBxVTBBSFUQQNhVYkHIVeJAtkNsbQ7c1LtzP6FsObhb2rCKv7NBIGoq4SDmKoEgTirXAcJVGkFSVVpgoSrXICGUMUH/QBZNSUy5XWUhwAAAABJRU5ErkJggg==');
}

.c1 .DayPicker-NavButton--interactionDisabled {
  display: none;
}

.c1 .DayPicker-Caption {
  margin-bottom: 0.5rem;
  padding: 0 0.5rem;
  text-align: left;
  color: inherit;
}

.c1 .DayPicker-Caption > div {
  font-weight: 500;
  font-size: large;
}

.c1 .DayPicker-Weekdays {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1rem;
}

.c1 .DayPicker-WeekdaysRow {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Weekday {
  color: hsl(0,0%,75%);
  text-align: center;
  height: 40px;
  width: 40px;
  box-sizing: border-box;
}

.c1 .DayPicker-Weekday abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .DayPicker-Body {
  display: block;
}

.c1 .DayPicker-Week {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .DayPicker-Day {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0.1rem 0;
  padding: 0.4rem 0.5rem;
  border-radius: 50%;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  pointer-events: auto;
  box-sizing: border-box;
  height: 40px;
  width: 40px;
  position: relative;
}

.c1 .DayPicker-Day:not(.DayPicker-Day--disabled):hover {
  background-color: hsl(207,90%,54%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-WeekNumber {
  font-size: small;
  padding: 0.5rem;
  min-width: 1rem;
  pointer-events: auto;
  border-right: 1px solid hsl(0,0%,75%);
  color: hsl(0,0%,50%);
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
}

.c1 .DayPicker--interactionDisabled .DayPicker-Day {
  cursor: default;
}

.c1 .DayPicker-Footer {
  padding-top: 0.5em;
}

.c1 .DayPicker-TodayButton {
  border: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #4A90E2;
  font-size: 0.875em;
  cursor: pointer;
  pointer-events: auto;
}

.c1 .DayPicker-Day--today {
  position: relative;
}

.c1 .DayPicker-Day--today:after {
  position: absolute;
  content: "";
  height: calc(100% - 2px);
  width: calc(100% - 2px);
  top: 0;
  left: 0;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 50%;
}

.c1 .DayPicker-Day--selected {
  background-color: hsl(186.8,100%,41.6%);
  color: hsl(0,0%,100%);
}

.c1 .DayPicker-Day--selected.DayPicker-Day--start {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1 .DayPicker-Day--selected.DayPicker-Day--end {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1 .DayPicker-Day--outside {
  color: hsl(0,0%,40%);
  cursor: default;
  background: transparent !important;
  visibility: hidden;
  pointer-events: none;
}

.c1 .DayPicker-Day--disabled {
  color: hsl(0,0%,75%);
  cursor: default;
  pointer-events: none;
}

.c1.c1.c1 .DayPickerInput {
  box-sizing: border-box;
  width: 100%;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1.5rem -1rem -0.5rem;
  padding: 1.5rem 1rem 0.5rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(0.5rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(0.5rem + 2px));
  transform: translateX(-1rem) translateY(calc(0.5rem + 2px));
}

.c1 + label {
  background: transparent;
  line-height: 1;
  top: 0.8rem;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-bottom: 2px solid hsl(323.3,84.6%,28%);
  margin-bottom: -1px;
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

.c1:focus-within {
  border-bottom: 2px solid hsl(323.3,84.6%,28%);
  margin-bottom: -1px;
}

.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1 .DayPickerInput-OverlayWrapper {
  pointer-events: none;
  left: 1rem;
  right: auto;
}

.c1 .DayPickerInput-OverlayWrapper .DayPickerInput-Overlay {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  display: block;
}

.c1 .DayPicker-Months {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <div
    className="c1"
    id="exampleJADateField"
    multiple={false}
    name="exampleJADateField"
  >
    <div
      className="DayPickerInput"
      style={
        Object {
          "container": Object {
            "input": Object {
              "padding": "1rem",
            },
          },
        }
      }
    >
      <input
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="LL"
        value="2019年12月18日"
      />
    </div>
  </div>
  <label
    className="c2"
    htmlFor="exampleJADateField"
  >
    Japanese
  </label>
</div>
`;
